--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,7 @@
     "hooks": {
       "pre-commit" : "npm test", 
       "pre-push" : "npm test",
-      "...": "..."
+      "...":"..."
     }
   }
 }
