--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "build": "webpack build --mode production",
+    "serve": "webpack serve --mode development"
   },
   "keywords": [],
   "author": "",
@@ -15,13 +16,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "husky": "^8.0.2"
-  }, 
-  "husky" : {
-    "hooks": {
-      "pre-commit" : "npm test", 
-      "pre-push" : "npm test",
-      "...":"..."
-    }
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
