--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "eslint ",
+    "test": "eslint ./src/ ",
     "build": "webpack build --mode production",
-    "serve": "webpack serve --mode development"
+    "start": "webpack serve --mode development"
   },
   "keywords": [],
   "author": "",
