--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   build:
+    env: 
+      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -38,4 +40,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          
