--- a/.github/workflows/deploy-to-firebase.yml
+++ b/.github/workflows/deploy-to-firebase.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - main
-env: 
-  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+
 jobs:
   build:
     name: Build
@@ -16,7 +15,9 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-        
+        with:
+          env: 
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
